# TrackerBoy

./: .gitignore  CMakeLists.txt  README.md
include/: bus.h  cartridge.h  common.h  cpu.h  debug.h  emulator.h  instructions.h  lookup.h  ram.h  stack.h
src/: bus.c  cartridge.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util..c  debug.c  emulator.c  instructions.c  log.c  lookup.c  ram.c  stack.c
trackerBoy/: main.c
